--- a/styles/tippy.css
+++ b/styles/tippy.css
@@ -8,7 +8,6 @@
     background-color: var(--tippy-color);
     border-radius: var(--tippy-border-radius);
     backdrop-filter: var(--frosted-glass-blur);
-    padding: 8px 12px;
     border: var(--outline);
     box-shadow: var(--shadow);
 }
@@ -23,6 +22,33 @@
     color: black;
 }
 
+.tippy-box[data-theme="dropdown"] {
+    background-color: white;
+    border: 1px solid rgb(229, 229, 229);
+    flex-direction: column;
+
+    .tippy-content div {
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        border-radius: 12px;
+
+        a {
+            color: rgb(42, 42, 42);
+            text-decoration: none;
+            transition-duration: 0.4s;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            padding: 8px;
+        }
+        a:hover {
+            color: black;
+            background-color: rgba(0, 0, 0, 0.042);
+        }
+    }
+}
+
 .tippy-box[data-theme="white"] .tippy-arrow {
     color: white;
 }
@@ -31,90 +57,10 @@
     color: rgba(255, 255, 255, 0);
 }
 
-
 .tippy-box[data-theme="suggestion"] {
     background-color: transparent;
     padding: 0;
     border-radius: 0;
-}
-
-.tippy-box[data-theme="premium"] {
-    background: linear-gradient(45deg, #fd03ff, #0097e6);
-    padding: 10px 20px;
-    color: white;
-    border-radius: 12px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: var(--shadow);
-    border: var(--outline);
-    border: 0;
-}
-
-.tippy-box[data-theme="premium"] .tippy-arrow {
-    color: #8C45F4;
-}
-
-.tippy-box[data-theme="pixelsplace_dropdown"] {
-    background: var(--frosted-glass);
-    backdrop-filter: unset;
-    border-radius: 12px;
-    user-select: none;
-    transition: var(--smooth-transition);
-    box-shadow: var(--shadow);
-    padding: 0;
-
-    .tippy-content {
-        border-radius: 12px;
-        backdrop-filter: var(--frosted-glass-blur);
-    }
-
-    .tippy-content > * {
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
-        overflow: hidden;
-        border-radius: 12px;
-
-        > *:not(div[data-tippy-root]) {
-            padding: 8px;
-            border-radius: 0px;
-            background-color: rgba(255, 255, 255, 0);
-            transition: var(--smooth-transition);
-            color: var(--color-text-dark);
-            display: flex;
-            justify-content: space-between;
-            flex-grow: 1;
-            align-items: center;
-            flex-direction: row;
-            gap: 8px;
-            cursor: pointer;
-
-            span {
-                color: var(--color-text-dark);
-            }
-        }
-
-        > section {
-            cursor: default !important;
-        }
-
-        > :not(div[data-tippy-root]):not(section):hover {
-            background-color: var(--hover-color, var(--color-hover)) !important;
-            color: var(--hover-color-text, var(--color-text-dark)) !important;
-            
-            span {
-                color: var(--hover-color-text, var(--color-text-dark)) !important;
-            }
-        }
-    }
-
-    hl {
-        background: var(--color-outline);
-        min-height: 1px;
-        min-width: 100%;
-    }
 }
 
 .tippy-arrow {
