--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -1,11 +1,14 @@
 .header {
-    background-color: var(--cor-branca);
     padding: 20px;
     display: flex;
     align-items: center;
     position: fixed;
     width: 100dvw;
     justify-content: space-between;
+    top: 0;
+    background: linear-gradient(180deg, white, transparent);
+    box-shadow: none;
+    border: none;
 
     .logo {
         font-size: 30px;
@@ -33,4 +36,17 @@
             display: flex;
         }
     }
+}
+.header::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    mask-image: linear-gradient(180deg, black, transparent);
 }
