--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -13,7 +13,7 @@
     .logo {
         font-size: 30px;
         font-weight: bold;
-        color: var(--cor-escura);
+        color: var(--darkest-color);
         display: flex;
         gap: 5px;
     }
