--- a/styles/nProgress.css
+++ b/styles/nProgress.css
@@ -2,19 +2,18 @@
     pointer-events: none;
 
     .bar {
-        background: red;
+        background: var(--accent-color);
 
         position: fixed;
         z-index: 1031;
         top: 0px;
         left: 0;
-
+        width: 100%;
+        height: 2px;
+        
         @media screen and (max-height: 500px) and (orientation: landscape) {
             top: 0;
         }
-
-        width: 100%;
-        height: 2px;
     }
 
     .peg {
