--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -22,6 +22,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 10px;
 
         @media (max-width: 640px) {
             display: none;
