--- a/styles/pages/index.module.css
+++ b/styles/pages/index.module.css
@@ -1,81 +1,46 @@
-/*Conteúdo principal do site*/
-#body {
-    background-color: var(--lightest-color);
-    user-select: none;
-    height: 100dvh;
+/*Corpo*/
+#main {
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    flex-grow: 1;
+    overflow: scroll;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
 
-    /*Corpo*/
-    main {
-        margin: 0px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin-top: 80px;
-        flex-grow: 1;
-        overflow: scroll;
-        scroll-snap-type: y mandatory;
-        scroll-behavior: smooth;
-        
-        h1 {
-            color: var(--cor-escura);
-        }
-
-        section {
-            display: flex;
-            flex-direction: row;
-            gap: 8px;
-            min-height: 90dvh;
-            scroll-snap-align: start;
-            
-            @media (max-width: 960px) {
-                flex-direction: column;
-                min-height: unset;
-
-                div img {
-                    max-width: 100%;
-                    height: unset;
-                }
-            }
-
-            div {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: flex-start;
-                padding: 10px;
-            }
-        }
-
-        #Secao1 {
-            div {
-                font-size: x-large;
-
-                h1 {
-                    border-left: 5px solid var(--cor-de-destaque);
-                    padding-left: 10px;
-                }
-            }
-        }
-
-        #Secao2 {
-            background-color: black;
-
-            div {
-                width: 50%;
-
-                p {
-                    color: white;
-                    font-size: 50px;
-                }
-
-                @media (max-width: 960px) {
-                    width: unset;
-                }
-            }
-        }
-
-        
+    @media (max-width: 640px) {
+        margin-top: 10dvh;
     }
+
+    h1 {
+        color: var(--cor-escura);
+    }
+
+    section {
+        display: flex;
+        flex-direction: row;
+        gap: 8px;
+        height: 100dvh;
+        width: 100dvw;
+        scroll-snap-align: start;
+
+        @media (max-width: 640px) {
+            flex-direction: column;
+            min-height: unset;
+
+            div img {
+                max-width: 100%;
+                height: unset;
+            }
+        }
+
+        div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            padding: 10px;
+        }
+    }
+
 }
