--- a/styles/nProgress.css
+++ b/styles/nProgress.css
@@ -2,7 +2,8 @@
     pointer-events: none;
 
     .bar {
-        background: var(--accent-color);
+        background: var(--lightest-color);
+        mix-blend-mode: difference;
 
         position: fixed;
         z-index: 1031;
