--- a/styles/pages/index.module.css
+++ b/styles/pages/index.module.css
@@ -56,6 +56,11 @@
             filter: drop-shadow(0 0 5px hsla(0, 0%, 0%, 50%));
             font-size: large;
             padding: 25%;
+
+            @media (max-width: 640px) {
+                color: black;
+                filter: unset;
+            }
         }
     }
 
